fix trapezoid impingement misinterpretation using new unplaced mesh dumping features added to both branches

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -80,6 +80,7 @@ set(SOURCES
   BOpticksResource.cc
   BDynamicDefine.cc
   BOpticksEvent.cc
+  BConfig.cc
 
 ) 
 
@@ -110,6 +111,7 @@ set(HEADERS
   BOpticksResource.hh
   BDynamicDefine.hh
   BOpticksEvent.hh
+  BConfig.hh
 
 )
 
