bbox comparisons are productive : fixed cone-z misinterpretation, found missing tube deltaphi imp, move to csg composite/prim bbox avoids polyfail noise reduces discrepant meshes to 12 percent

--- a/sysrap/CMakeLists.txt
+++ b/sysrap/CMakeLists.txt
@@ -43,6 +43,7 @@ set(SOURCES
     STimes.cc
     SLog.cc
     SBase36.cc
+    SSortKV.cc
     md5.cc
 ) 
 
@@ -62,6 +63,8 @@ set(HEADERS
     SRenderer.hh
     STimes.hh
     SLog.hh
+    SBase36.hh
+    SSortKV.hh
     OpticksCSG.h
 )
 
