--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -3,7 +3,6 @@ set(name OptiXRap)
 project(${name})
 
 
-
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${OptiX_INSTALL_DIR}/SDK/CMake") 
 
 include(EnvBuildOptions)
@@ -179,6 +178,7 @@ set(SOURCES
     cu/dirtyBufferTest.cu
     cu/compactionTest.cu
     cu/minimalTest.cu
+    cu/cbrtTest.cu
     cu/LTminimalTest.cu
     cu/axisTest.cu
     cu/seedTest.cu
@@ -206,6 +206,7 @@ set(OX_PTXS
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_generate.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_textureTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_minimalTest.cu.ptx
+    ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_cbrtTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_LTminimalTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_axisTest.cu.ptx
     ${CMAKE_CURRENT_BINARY_DIR}/${name}_generated_seedTest.cu.ptx
