start on hyperbolic hyperboloid of one sheet, hope to model PMT neck with hyperboloid rather than subtracted torus

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -163,6 +163,7 @@ set(SOURCES
     NQuad.cpp
     NSphere.cpp
     NTorus.cpp
+    NHyperboloid.cpp
     NBBox.cpp
     NBBoxEnum.cpp
     NPart.cpp
