CSG_CUBIC surface-of-revolution primitive,  xx + yy = Azzz + Bzz + Cz + D  specified via cubic polynomial coeff A,B,C,D and z range

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -164,6 +164,8 @@ set(SOURCES
     NSphere.cpp
     NTorus.cpp
     NHyperboloid.cpp
+    NCubic.cpp
+
     NBBox.cpp
     NBBoxEnum.cpp
     NPart.cpp
