remove the scriptloc in opticks-config.

--- a/cmake/Templates/opticks-config.in
+++ b/cmake/Templates/opticks-config.in
@@ -46,7 +46,7 @@ fi
 scriptloc=`dirname $script`
 
 
-echo scriptloc $scriptloc
+# echo scriptloc $scriptloc
 
 
 #-----------------------------------------------------------------------
