--- a/okop/CMakeLists.txt
+++ b/okop/CMakeLists.txt
@@ -117,6 +117,9 @@ set(HEADERS
     OpIndexer.hh
     OpIndexerApp.hh
     OpEngine.hh
+    OpPropagator.hh
+    OpTracer.hh
+    OpMgr.hh
 )
 
 CUDA_ADD_LIBRARY( ${name} SHARED ${SOURCES} OPTIONS)
@@ -124,6 +127,7 @@ target_link_libraries( ${name} ${LIBRARIES} )
 
 install(TARGETS ${name}  DESTINATION lib)
 install(FILES ${HEADERS}   DESTINATION include/${name})
+install(FILES ${HEADERS}   DESTINATION include/Opticks)
 
 #add_subdirectory(tests EXCLUDE_FROM_ALL)
 add_subdirectory(tests)
