rejig --test geo mods to OpticksHub::modifyGeometry, split most difficult aiming part into OpticksAim

--- a/opticksgeo/CMakeLists.txt
+++ b/opticksgeo/CMakeLists.txt
@@ -98,6 +98,7 @@ set(SOURCES
 
     OKGEO_LOG.cc
     OpticksGeometry.cc
+    OpticksAim.cc
     OpticksHub.cc
     OpticksGen.cc
     OpticksGun.cc
