split off anaEvent for --test geometry into GGeoTest::anaEvent using OpticksEventAna

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCES
     OpticksDbg.cc
     OpticksDomain.cc
     OpticksEventSpec.cc
+    OpticksEventAna.cc
     OpticksEvent.cc
     OpticksRun.cc
     OpticksEntry.cc
