--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(TEST_SOURCES
    SEnvTest.cc
    SSysTest.cc
    SVecTest.cc
+   SSeqTest.cc
    SProcTest.cc
    SBase36Test.cc
    SSortKVTest.cc
