onwards to okg4 torch alignment

--- a/optickscore/CMakeLists.txt
+++ b/optickscore/CMakeLists.txt
@@ -72,6 +72,8 @@ set(SOURCES
     OpticksDomain.cc
     OpticksEventSpec.cc
     OpticksEventAna.cc
+    OpticksEventStat.cc
+    OpticksEventCompare.cc
     OpticksEventDump.cc
     OpticksEvent.cc
     OpticksRun.cc
