nnode::par_posnrm_model specializations for box and sphere, used in nnode::generateParPoints to give points and normals at random across the primitive parametric surfaces : aiming for an emit mode that can be applied to NCSG primitives for auto-lighting

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -53,6 +53,7 @@ NCubicTest.cc
 NSphereTest.cc
 NZSphereTest.cc
 NBoxTest.cc
+NNode2Test.cc
 NSlabTest.cc
 NPlaneTest.cc
 NCylinderTest.cc
@@ -86,6 +87,7 @@ NMarchingCubesNPYTest.cc
 NCSGTest.cc
 NCSGLoadTest.cc
 NCSGScanTest.cc
+NCSGListTest.cc
 NScanTest.cc
 
 NCSGPolygonizeTest.cc 
