pushing input photon source thru to cfg4, 4 top level opticks-t tests OKTest VizTest CG4Test OKG4Test broken from lack handling of missing source_buffer

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -188,6 +188,7 @@ set(SOURCES
     CStepRec.cc
     CGunSource.cc
     CTorchSource.cc
+    CInputPhotonSource.cc
 
     CEventAction.cc
     CSteppingAction.cc
