NPho photon buffer wrapper for use from CInputPhotonSource, testing with tboolean-;tboolean-torus -D --okg4 --sourcedbg

--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_SOURCES
    STimesTest.cc
    SEnvTest.cc
    SSysTest.cc
+   STrancheTest.cc
    SVecTest.cc
    SSeqTest.cc
    SProcTest.cc
