testing G4 geometry via GDML export in tboolean-sphere-g via : CTestDetectorTest --export  reveals need for GSurLib overhaul for analytic test geometry

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ set(_TEST_SOURCES
 set(TEST_SOURCES
 
     CMaterialLibTest.cc
+    CMaterialTest.cc
     CTestDetectorTest.cc
     CGDMLDetectorTest.cc
     CGeometryTest.cc
