prep universe wrapper volume, trying to translate GGeoTest test geometry from Opticks boundary model into Geant4 volume model

--- a/boostrap/tests/CMakeLists.txt
+++ b/boostrap/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ set(TEST_SOURCES
    LexicalCastTest.cc
    BBisectTest.cc
    BConfigTest.cc
+   BBndTest.cc
    BConfigConstituentTest.cc
    BRngTest.cc
 
