notes/issues/surface_review.rst suggests GSurLib/CSurLib complexities can be avoided by improved PropLib metadata, add NJS json infrastructure to start on this

--- a/opticksnpy/tests/CMakeLists.txt
+++ b/opticksnpy/tests/CMakeLists.txt
@@ -174,6 +174,8 @@ if(YoctoGL_FOUND)
        NSDFTest.cc
        NSceneLoadTest.cc
        NSceneMeshTest.cc
+       NYJSONTest.cc
+       NJSTest.cc
 )
 endif()
 
