CSurfaceLib direct from GSurfaceLib : attempting to usurp GSur/GSurLib/CSurLib, review border surface in GDML and G4DAE

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -183,7 +183,9 @@ set(SOURCES
     CRecorder.cc
     CDetector.cc
     CGDMLDetector.cc
+    COptical.cc
     CSurLib.cc
+    CSurfaceLib.cc
     CMaker.cc
     CTestDetector.cc
     CStepRec.cc
