prep for making GSurfaceLib/GBndLib from scratch for GGeoTest geometries, testing in GBndLibInitTest

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ set(TEST_SOURCES
     GSourceTest.cc
     GSourceLibTest.cc
     GBndLibTest.cc
+    GBndLibInitTest.cc
 
     GMeshTest.cc
     GNodeTest.cc
