tboolean-box seqmat and bouncemax issues reveal need to splitup CRecorder monolith

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -181,6 +181,8 @@ set(SOURCES
     CPrimaryGeneratorAction.cc
 
     CRecorder.cc
+    CRecorderWriter.cc
+
     CDetector.cc
     CGDMLDetector.cc
     COptical.cc
