breaking commit WIP : cfg4/CRecorder simplifications using shared CG4Ctx see notes/issues/CRecorder_review.rst

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -198,6 +198,7 @@ set(SOURCES
     CSteppingAction.cc
     CTrackingAction.cc
     CStage.cc
+    CG4Ctx.cc
     CG4.cc
     CCollector.cc
     CRunAction.cc
