getting CRecorder pullouts CPhoton CWriter to work

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -181,8 +181,9 @@ set(SOURCES
     CPrimaryGeneratorAction.cc
 
     CRecorder.cc
+    CPhoton.cc
     CAction.cc
-    CRecorderWriter.cc
+    CWriter.cc
 
     CDetector.cc
     CGDMLDetector.cc
