fix recpoi missing TO AB : but comparison of recpoi/recstp reveals topslot rewrite difference

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCES
     AnimatorTest.cc
     TrackballTest.cc
     OpticksFlagsTest.cc
+    OpticksPhotonTest.cc
     OpticksCfgTest.cc
     OpticksTest.cc
     OpticksResourceTest.cc
