notes/issues/tboolean-zsphere1-zsphere2-discrep.rst smoking gun found from examining G4Sphere.cc : theta range gives conic sectors, not flat endcap segments

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -206,6 +206,8 @@ set(SOURCES
     CStage.cc
     CG4Ctx.cc
     CG4.cc
+    CRayTracer.cc
+    CVis.cc
     CCollector.cc
     CRunAction.cc
     CEventAction.cc
