NCSGIntersect OpticksEventAna preparing fully automated NCSG sdf intersect checking

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -199,6 +199,7 @@ set(SOURCES
     NMarchingCubesNPY.cpp
 
     NCSG.cpp
+    NCSGIntersect.cpp
     NCSGList.cpp
     NOctNodeEnum.cpp
     NOctNode.cpp
