sink GGeoTestConfig down to NGeoTestConfig to allow access with OpticksEventAna to parse the testconfig noted with the OpticksEvent, get 280/280 tests to pass

--- a/opticksnpy/CMakeLists.txt
+++ b/opticksnpy/CMakeLists.txt
@@ -138,6 +138,7 @@ set(SOURCES
     NSensor.cpp
     NSensorList.cpp
 
+    NGeoTestConfig.cpp
     NGunConfig.cpp
     NScan.cpp
     NScanLine.cpp
