notes/issues/resource_review.rst eliminating the kludge envvars OPTICKS_SRCPATH OPTICKS_RESOURCE_LAYOUT used during migration from layout 0 to 1

--- a/boostrap/tests/CMakeLists.txt
+++ b/boostrap/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
    BBitTest.cc
    BLogTest.cc
    BFileTest.cc
+   BPathTest.cc
    BBufSpecTest.cc
    BEnvTest.cc
    BOpticksResourceTest.cc
