--- a/ok/CMakeLists.txt
+++ b/ok/CMakeLists.txt
@@ -112,7 +112,7 @@ set(BASE_DEFINITIONS
 
 ########### GEOMETRY #####
 
-find_package(Assimp REQUIRED)
+find_package(OpticksAssimp REQUIRED)
 find_package(AssimpRap REQUIRED)
 find_package(OpenMesh REQUIRED)
 find_package(OpenMeshRap REQUIRED)
@@ -120,7 +120,7 @@ find_package(GGeo REQUIRED)
 find_package(OpticksGeometry REQUIRED)
 
 set(GEOMETRY_INCLUDES
-   ${Assimp_INCLUDE_DIRS}  
+   ${OpticksAssimp_INCLUDE_DIRS}  
    ${AssimpRap_INCLUDE_DIRS}  
    ${OpenMesh_INCLUDE_DIRS}  
    ${OpenMeshRap_INCLUDE_DIRS}  
@@ -128,7 +128,7 @@ set(GEOMETRY_INCLUDES
    ${OpticksGeometry_INCLUDE_DIRS}  
 )
 set(GEOMETRY_LIBRARIES
-   ${Assimp_LIBRARIES} 
+   ${OpticksAssimp_LIBRARIES} 
    ${AssimpRap_LIBRARIES} 
    ${OpenMesh_LIBRARIES} 
    ${OpenMeshRap_LIBRARIES} 
@@ -136,7 +136,7 @@ set(GEOMETRY_LIBRARIES
    ${OpticksGeometry_LIBRARIES}  
 )
 set(GEOMETRY_DEFINITIONS
-   ${Assimp_DEFINITIONS}  
+   ${OpticksAssimp_DEFINITIONS}  
    ${AssimpRap_DEFINITIONS}  
    ${OpenMesh_DEFINITIONS}  
    ${OpenMeshRap_DEFINITIONS}  
