--- a/opticksgeo/CMakeLists.txt
+++ b/opticksgeo/CMakeLists.txt
@@ -44,28 +44,28 @@ set(BASE_DEFINITIONS
 
 ########### GEOMETRY #####
 
-find_package(Assimp REQUIRED)
+find_package(OpticksAssimp REQUIRED)
 find_package(AssimpRap REQUIRED)
 find_package(OpenMesh REQUIRED)
 find_package(OpenMeshRap REQUIRED)
 find_package(GGeo REQUIRED)
 
 set(GEOMETRY_INCLUDES
-   ${Assimp_INCLUDE_DIRS}  
+   ${OpticksAssimp_INCLUDE_DIRS}  
    ${AssimpRap_INCLUDE_DIRS}  
    ${OpenMesh_INCLUDE_DIRS}  
    ${OpenMeshRap_INCLUDE_DIRS}  
    ${GGeo_INCLUDE_DIRS}  
 )
 set(GEOMETRY_LIBRARIES
-   ${Assimp_LIBRARIES} 
+   ${OpticksAssimp_LIBRARIES} 
    ${AssimpRap_LIBRARIES} 
    ${OpenMesh_LIBRARIES} 
    ${OpenMeshRap_LIBRARIES} 
    ${GGeo_LIBRARIES} 
 )
 set(GEOMETRY_DEFINITIONS
-   ${Assimp_DEFINITIONS}  
+   ${OpticksAssimp_DEFINITIONS}  
    ${AssimpRap_DEFINITIONS}  
    ${OpenMesh_DEFINITIONS}  
    ${OpenMeshRap_DEFINITIONS}  
