--- a/sysrap/tests/CMakeLists.txt
+++ b/sysrap/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(TEST_SOURCES
    SYSRAP_LOG_FileAppenderTest.cc
 
    OpticksCSGTest.cc
+   hash_define_without_value.cc
 )
 
 foreach(SRC ${TEST_SOURCES})
