notes/issues/random_alignment.rst investigate approaches allowing use of the same RNG sequence with Opticks and Geant4

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
     G4MaterialTest.cc
     G4StringTest.cc
     G4SphereTest.cc
+    G4UniformRandTest.cc
     G4BoxTest.cc
     CCollectorTest.cc
     CInterpolationTest.cc
