tidy up CRandomEngine by moving location sequence recording/digests etc down into BLocSeq

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -85,6 +85,7 @@ set(SOURCES
   BBnd.cc
   BRng.cc
   BConverter.cc
+  BLocSeq.cc
 
 ) 
 
@@ -116,6 +117,7 @@ set(HEADERS
   BDynamicDefine.hh
   BOpticksEvent.hh
   BConfig.hh
+  BLocSeq.hh
 
 )
 
