succeed to align (in principal)  TO BT BT SA using devious G4VDiscreteProcess::PostStepDoIt applied to OpAbsorption and OpRayleigh plus some RNG burns in cu/propagate.h

--- a/cfg4/CMakeLists.txt
+++ b/cfg4/CMakeLists.txt
@@ -214,6 +214,7 @@ set(SOURCES
 
     CRandomEngine.cc
     CProcess.cc
+    CProcessManager.cc
     CStepping.cc
     CSteppingState.cc
     CStepStatus.cc
