redirection of CUDA/Thrust/OptiX kernel output to log works to some extent, fd humpty still not complete

--- a/cudarap/tests/CMakeLists.txt
+++ b/cudarap/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ set(TEST_SOURCES
    LaunchSequenceTest.cc
    cuRANDWrapperTest.cc
    curand_aligned_host.cc
+ 
    
 )
 
@@ -26,6 +27,8 @@ endforeach()
 
 set(TEST_SOURCES_CU
    cudaGetDevicePropertiesTest.cu
+   cudarap_printf_redirect.cu
+   gpu_printf_redirect.cu 
 )
 
 foreach(CU ${TEST_SOURCES_CU})
