standalone lldb python enables interactive dev cycle for lldb scripting, avoiding tedious re-launching large executables to debug the debugging scripts

--- a/cfg4/tests/CMakeLists.txt
+++ b/cfg4/tests/CMakeLists.txt
@@ -20,6 +20,7 @@ set(TEST_SOURCES
     G4SphereTest.cc
     G4UniformRandTest.cc
     G4BoxTest.cc
+    G4ThreeVectorTest.cc
     CCollectorTest.cc
     CInterpolationTest.cc
     OpRayleighTest.cc 
